// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render message 1`] = `
<div>
  <_class
    text="Hello *world*!"
  />
</div>
`;

exports[`renderer should render message for array 1`] = `
<div>
  <_class
    text="Hello *world*!
  Foo _bar_"
  />
</div>
`;
